# electrum-like-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.sh  pyproject.toml
docker/core/: Dockerfile
src/: CMakeLists.txt  utils.cpp  utils.h
src/coreclient/: main.cpp
src/daemon/: main.cpp
src/dev/: example_server.cpp  example_server2.cpp  main.cpp
src/rpc/: client.cpp  client.h  rpcclient.cpp
src/univalue/: CMakeLists.txt
tests/: test_server_connection.py
