find_package(Boost REQUIRED)
message("Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
include_directories(${Boost_INCLUDE_DIRS})
add_executable(elc-dev dev/main.cpp utils.cpp rpc/client.cpp)
add_executable(elcd daemon/main.cpp utils.cpp rpc/client.cpp)
target_link_libraries(elc-dev univalue)
target_link_libraries(elcd univalue)
add_subdirectory(univalue)
