find_package(Boost REQUIRED)
message("Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
include_directories(${Boost_INCLUDE_DIRS})
add_executable(elc-example-client dev/example_client.cpp utils.cpp rpc/client.cpp)
add_executable(elc-example-server dev/example_server.cpp utils.cpp rpc/client.cpp)
add_executable(elc-example-server2 dev/example_server2.cpp utils.cpp rpc/client.cpp)
add_executable(elcd daemon/main.cpp utils.cpp rpc/client.cpp)
target_link_libraries(elc-example-client univalue)
target_link_libraries(elc-example-server univalue)
target_link_libraries(elc-example-server2 univalue)
target_link_libraries(elcd univalue)
add_subdirectory(univalue)
